--- a/src/app/queues/add-edit-queues/add-edit-queues.component.html
+++ b/src/app/queues/add-edit-queues/add-edit-queues.component.html
@@ -42,6 +42,13 @@
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
+
+                  <ng-select [(ngModel)]="selectedCar" class="form-control" 
+                  [multiple]="true"
+                  [searchable]="true"
+                  >
+                    <ng-option *ngFor="let car of cars" [value]="car.id">{{car.name}}</ng-option>
+                 </ng-select>
               </div>
             <div class="col-md-6">
                 <mat-form-field appearance="outline" id="txtFormElements">
